--- a/xaringan-themer.css
+++ b/xaringan-themer.css
@@ -50,7 +50,7 @@
   --text-bold-color: #9F999C;
   --code-highlight-color: rgba(255,255,0,0.5);
   --inverse-text-color: #000000;
-  --inverse-background-color: #FFE5F3;
+  --inverse-background-color: #8ACEF6;
   --inverse-header-color: #8F8C8E;
   --inverse-link-color: deeppink;
   --title-slide-background-color: #9F999C;
@@ -58,7 +58,7 @@
   --header-background-color: #9F999C;
   --header-background-text-color: #FFFFFF;
   --primary: #9F999C;
-  --secondary: #FFE5F3;
+  --secondary: #8ACEF6;
   --white: #FFFFFF;
   --black: #000000;
 }
@@ -180,7 +180,7 @@ img, video, iframe {
   max-width: 100%;
 }
 blockquote {
-  border-left: solid 5px #FFE5F380;
+  border-left: solid 5px #8ACEF680;
   padding-left: 1em;
 }
 .remark-slide table {
@@ -195,7 +195,7 @@ th, td {
   padding: 5px;
 }
 .remark-slide thead, .remark-slide tfoot, .remark-slide tr:nth-child(even) {
-  background: #FFF9FC;
+  background: #E7F5FD;
 }
 table.dataTable tbody {
   background-color: var(--background-color);
@@ -205,7 +205,7 @@ table.dataTable.display tbody tr.odd {
   background-color: var(--background-color);
 }
 table.dataTable.display tbody tr.even {
-  background-color: #FFF9FC;
+  background-color: #E7F5FD;
 }
 table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
   background-color: rgba(255, 255, 255, 0.5);
